--- a/index.html
+++ b/index.html
@@ -127,38 +127,26 @@
 
 <!-- محتوى الفيديوهات -->
 <div class="content" id="videoContent">
-    <!-- إضافة 10 إعلانات فيديو -->
+    <!-- إضافة إعلانات الفيديو -->
     <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8065284792641984"></script>
         <ins class="adsbygoogle"
              style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX"  <!-- ضع معرّف حسابك الخاص هنا -->
-             data-ad-slot="XXXXXXX"   <!-- ضع رقم الإعلان هنا -->
+             data-ad-client="ca-pub-8065284792641984" 
+             data-ad-slot="8056686085" 
              data-ad-format="video"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </div>
 
-    <!-- كرر الكود لـ 9 إعلانات فيديو أخرى -->
+    <!-- كرر الكود للإعلانات الأخرى -->
     <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8065284792641984"></script>
         <ins class="adsbygoogle"
              style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
-             data-ad-format="video"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
+             data-ad-client="ca-pub-8065284792641984" 
+             data-ad-slot="5127270416" 
              data-ad-format="video"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
@@ -166,11 +154,11 @@
     </div>
 
     <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8065284792641984"></script>
         <ins class="adsbygoogle"
              style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
+             data-ad-client="ca-pub-8065284792641984" 
+             data-ad-slot="9825063324" 
              data-ad-format="video"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
@@ -178,64 +166,18 @@
     </div>
 
     <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8065284792641984"></script>
         <ins class="adsbygoogle"
              style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
+             data-ad-client="ca-pub-8065284792641984" 
+             data-ad-slot="4496715028" 
              data-ad-format="video"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </div>
 
-    <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
-             data-ad-format="video"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
-             data-ad-format="video"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
-             data-ad-format="video"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <div class="video">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:block; width: 300px; height: 250px;"
-             data-ad-client="ca-pub-XXXXXXX" 
-             data-ad-slot="XXXXXXX" 
-             data-ad-format="video"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
+    <!-- يمكن إضافة المزيد من الإعلانات بنفس الطريقة -->
 
 </div>
 
